Bug #4323
closedNDMP return the wrong error code in NDMP backup policy
100%
Description
NDMP policy has 3 Backup selection paths (with 2 valid and 1 invalid) Backup started with 1st path which was successful, but for 2 path which was 'invalid' failed with unimplemented error code 114 (NDMP_FILE_NOT_FOUND_ERR).
NOTE: From NDMP specV4, This error code that ndmp implementation on illumos is returning when one of the path is invalid 'NDMP_FILE_NOT_FOUND_ERR' is used only for 'recover' operation. We need to receive 'NDMP_ILLEGAL_ARGS_ERR' instead, then NDMP agent would have continued with the next path and return partial success.
Updated by Jan Kryl over 8 years ago
- Status changed from New to In Progress
- % Done changed from 0 to 90
Citing relevant part of the spec:
"NDMP_FILE_NOT_FOUND_ERR During a recover operation, a specified file was not found."
From spec it's clear that we cannot return this code during backup operation. The return code should be changed to NDMP_ILLEGAL_ARGS_ERR as suggested in description of the bug.
Updated by Jan Kryl over 8 years ago
- Status changed from In Progress to Pending RTI
- % Done changed from 90 to 100
Updated by Rich Lowe over 8 years ago
- Status changed from Pending RTI to Resolved
Resolved in a8039bf