4323 NDMP return the wrong error code in NDMP backup policy Reviewed by: Albert Lee <trisk@nexenta.com> Approved by: Richard Lowe <richlowe@richlowe.net>